# NAVIER-CFD

./: .gitignore  AGENTS.md  CITATION.cff  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  PAGES_DEPLOYMENT.md  README.md  SECURITY.md  TRIGGER_WEBSITE_DEPLOYMENT.md  environment-rtx3060.yml  index.html  mkdocs.yml  pyproject.toml  requirements-rtx3060.txt
.agents/skills/navier-audit-cfd-data/: SKILL.md
.agents/skills/navier-define-research-problem/: SKILL.md
.agents/skills/navier-diagnose-cfd-results/: SKILL.md
.agents/skills/navier-generate-research-figures/: SKILL.md
.agents/skills/navier-review-scientific-validity/: SKILL.md
.agents/skills/navier-run-autoresearch/: SKILL.md
.codex/: config.toml.example
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: dataset_integration.md  model_integration.md
.github/workflows/: bootstrap-site.yml  bootstrap.yml  ci.yml  docs.yml  evidence-diagnostic.yml  package.yml  pages-bootstrap-debug.yml  pages-branch.yml  publish-pypi.yml  self-fix-upstream.yml  upstream-data.yml
assets/: site.css
bootstrap/: part_00.txt  part_01.txt  part_02.txt  rest_a.txt  rest_b.txt  site_patch.tar.gz.b64
bootstrap/chunks/: part_00.txt  part_01.txt  part_02.txt  part_03.txt  part_04.txt  part_05.txt  part_06.txt  part_07.txt
case_studies/: README.md  airfrans_geometry.md  cfdbench_cylinder.md  hybrid_acceleration.md
configs/: rtx3060_demo.json
configs/tasks/: cfdbench_cylinder.json  realpdebench_fsi.json  unstructured_acceleration.json
data/: catalog.json  dataset-catalog.mjs
docs/: 404.html  404.md  AGENTIC_AI.md  AGENTIC_AI.zh.md  ARCHITECTURE.md  ARCHITECTURE.zh.md  AUTORESEARCH.md  AUTORESEARCH_ARCHITECTURE.md  AUTORESEARCH_SESSIONS.md  AUTORESEARCH_TOOLS.md  CFD_DIAGNOSTICS.md  CODEX_SKILLS.md  DATASET_CATALOG.md  DATASET_CATALOG.zh.md  DEPLOYMENT.md  EVIDENCE_SCORING.md  EVIDENCE_SCORING.zh.md  FIGURELAB.md  METRICS.md  METRICS.zh.md  METRICS_DATA.md  METRICS_DATA.zh.md  METRICS_PHYSICS.md  METRICS_PHYSICS.zh.md  MODEL_CATALOG.md  MODEL_CATALOG.zh.md  MODEL_HUB.md  MODEL_HUB.zh.md  NATIVE_MODEL_SUITE.md  NATIVE_MODEL_SUITE.zh.md  RECOMMENDER.md  RECOMMENDER.zh.md  RELEASE_1_1_0.md  ROADMAP.md  ROADMAP.zh.md  RTX3060_QUICKSTART.md  UNIFIED_EXPERIMENTS.md  UNIFIED_EXPERIMENTS.zh.md  UNIVERSAL_DATASETS.md  UNIVERSAL_DATASETS.zh.md  (+5 more)
docs/404/: index.html
docs/AGENTIC_AI/: index.html
docs/ARCHITECTURE/: index.html
docs/AUTORESEARCH/: index.html
docs/AUTORESEARCH_ARCHITECTURE/: index.html
docs/AUTORESEARCH_SESSIONS/: index.html
docs/AUTORESEARCH_TOOLS/: index.html
docs/CFD_DIAGNOSTICS/: index.html
docs/CODEX_SKILLS/: index.html
docs/DATASET_CATALOG/: index.html
docs/DEPLOYMENT/: index.html
docs/EVIDENCE_SCORING/: index.html
docs/FIGURELAB/: index.html
docs/METRICS/: index.html
docs/METRICS_DATA/: index.html
docs/METRICS_PHYSICS/: index.html
docs/MODEL_CATALOG/: index.html
docs/MODEL_HUB/: index.html
docs/NATIVE_MODEL_SUITE/: index.html
docs/RECOMMENDER/: index.html
docs/RELEASE_1_1_0/: index.html
docs/ROADMAP/: index.html
docs/UNIFIED_EXPERIMENTS/: index.html
docs/UNIVERSAL_DATASETS/: index.html
docs/case_studies/: README.zh.md  airfrans_geometry.zh.md  automotive_3d.md  automotive_3d.zh.md  cfdbench_cavity.md  cfdbench_cavity.zh.md  cfdbench_cylinder.zh.md  hybrid_acceleration.zh.md  index.html  pdebench_navier_stokes.md  pdebench_navier_stokes.zh.md  realpdebench_cylinder.md  realpdebench_cylinder.zh.md  realpdebench_fsi.md  realpdebench_fsi.zh.md
docs/case_studies/airfrans_geometry/: index.html
docs/case_studies/automotive_3d/: index.html
docs/case_studies/cfdbench_cavity/: index.html
docs/case_studies/cfdbench_cylinder/: index.html
docs/case_studies/hybrid_acceleration/: index.html
docs/datasets/: airfrans.md  airfrans.zh.md  apebench.md  cfdbench.md  cfdbench.zh.md  drivaerml.md  drivaernetpp.md  eagle.md  pdebench.md  pdebench.zh.md  realpdebench.md  realpdebench.zh.md  scalarflow.md  shapenet_car.md  the_well.md  the_well.zh.md
docs/deployment-status/: index.html
docs/models/: README.md  README.zh.md  aerotransformer.md  domino.md  fourierflow.md  geometry_preconditioner.md  gino.md  inc.md  index.html  p3d.md  pibert.md  pict.md  transolver.md  upt.md
docs/search/: search_index.json
docs/zh/: index.html
experiments/: rtx3060_demo.py
paper/aaai27/: ABSTRACT_DRAFT.md  SPRINT.md
recommender/: app.mjs  index.html  recommender-core.mjs
references/: README.md
results/rtx3060_cpu_smoke/: README.md  metrics.csv  recommendation.json  run_manifest.json
scripts/: build_web_runtime.py  publish_to_github.sh  validate_catalog.py  validate_official_upstreams.py
src/navier_cfd/: __init__.py  catalogs.py  checkpoints.py  cli.py  evidence.py  experiment.py  recommender.py  runtime_registry.py  specs.py  training.py
tests/: test_agent.py  test_autoresearch.py  test_autoresearch_tools.py  test_catalog.py  test_dataset_pipeline.py  test_evidence_recommender.py  test_figurelab.py  test_metric_suites.py  test_metrics.py  test_model_hub.py  test_native_suite.py  test_official_upstream_sources.py  test_pibert_pipeline.py  test_recommender.py  test_scientific_hf_providers.py  test_the_well_provider.py  test_universal_dataset_providers.py  test_web_recommender.py
website/: 404.html  app.js  index.html  styles.css
website/assets/: site.css
website/data/: catalog.mjs  model-catalog.mjs
website/recommender/: README.md  app.mjs  index.html  recommender-core.test.mjs
(+133 files in other folders)
