[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "navier-cfd"
version = "0.5.0"
description = "Dataset-configured native neural operators, deep-learning CFD models, physics-informed models, PIBERT, training, metrics, checkpoints, and recommendation."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
  {name = "Somyajit Chakraborty", email = "chksomyajit@sjtu.edu.cn"},
]
keywords = ["CFD", "scientific machine learning", "neural operator", "PINN", "PIBERT", "PDE", "Hugging Face", "model hub"]
dependencies = [
  "numpy>=1.24",
  "typer>=0.12",
  "rich>=13.7",
  "huggingface_hub>=0.24",
  "datasets>=2.20",
]

[project.optional-dependencies]
torch = ["torch>=2.1"]
models = ["torch>=2.1"]
train = ["torch>=2.1"]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.5", "mypy>=1.10"]
docs = ["mkdocs-material>=9.5"]
all = ["torch>=2.1", "pytest>=8", "pytest-cov>=5", "ruff>=0.5", "mypy>=1.10", "mkdocs-material>=9.5"]

[project.scripts]
navier = "navier_cfd.cli:app"
cfdns = "navier_cfd.cli:app"

[project.urls]
Homepage = "https://github.com/Samsomyajit/NAVIER-CFD"
Documentation = "https://samsomyajit.github.io/NAVIER-CFD/"
Issues = "https://github.com/Samsomyajit/NAVIER-CFD/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/navier_cfd"]

[tool.hatch.build]
include = ["src/navier_cfd/**/*.py", "src/navier_cfd/**/*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
