[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

# Releases are published from main through PyPI Trusted Publishing.
[project]
name = "navier-cfd"
version = "0.8.0"
description = "Dataset-configured neural CFD models, universal provider-aware scientific data access, physical metrics, training, checkpoints, and evidence-aware recommendation."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
  {name = "Somyajit Chakraborty", email = "chksomyajit@sjtu.edu.cn"},
  {name = "Xizhong Chen", email = "chenxizh@sjtu.edu.cn"},
]
keywords = ["CFD", "scientific machine learning", "neural operator", "PINN", "PIBERT", "PDE", "The Well", "PDEBench", "CFDBench", "RealPDEBench", "APEBench", "AirfRANS", "DrivAerNet++", "ScalarFlow", "EAGLE", "physical metrics", "model hub"]
dependencies = [
  "numpy>=1.24",
  "typer>=0.12",
  "rich>=13.7",
  "huggingface_hub>=0.24",
  "datasets>=2.20",
]

[project.optional-dependencies]
torch = ["torch>=2.1"]
models = ["torch>=2.1"]
train = ["torch>=2.1"]
the-well = ["the_well>=1.2.0"]
pdebench = ["h5py>=3.10"]
apebench = ["apebench"]
mesh-data = ["pyvista>=0.43"]
scientific-data = ["h5py>=3.10"]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.5", "mypy>=1.10", "h5py>=3.10"]
docs = ["mkdocs-material>=9.5", "mkdocs-static-i18n>=1.2.3"]
all = ["torch>=2.1", "the_well>=1.2.0", "h5py>=3.10", "apebench", "pyvista>=0.43", "pytest>=8", "pytest-cov>=5", "ruff>=0.5", "mypy>=1.10", "mkdocs-material>=9.5", "mkdocs-static-i18n>=1.2.3"]

[project.scripts]
navier = "navier_cfd.cli:app"
cfdns = "navier_cfd.cli:app"

[project.urls]
Homepage = "https://github.com/Samsomyajit/NAVIER-CFD"
Documentation = "https://samsomyajit.github.io/NAVIER-CFD/"
